[project]
name = 'aoc_2023'
version = '0.0.1'
authors = [
  { name='Matthew Hall', email='Matthew.1.Hall@gov.bc.ca' }
]
description = 'Advent of Code 2023'
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=./src",
    "--cov-report=html:cover",
    "--cov-report=lcov:lcov.info"
]
pythonpath = [".","src","src/aoc_2023","src/aoc_2023/models"]
log_file_level = "INFO"
log_file_format = "[%(asctime)s] %(levelname)-10s %(funcName)-12s   %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logging_test.txt"

[build-system]
requires = ["setuptools>=61.0",""]
build-backend = "setuptools.build_meta"